changes to skills section

--- a/index.html
+++ b/index.html
@@ -1,78 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Author" content="Jonathan Nkansah Koranteng">
-    <meta name="description" content="A web Portfolio to showcase myh skills as a designer and developer.">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Courgette&family=Coustard:wght@400;900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Author" content="Jonathan Nkansah Koranteng" />
+    <meta
+      name="description"
+      content="A web Portfolio to showcase my skills as a designer and developer."
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Courgette&family=Coustard:wght@400;900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Web Portfolio | Home</title>
-    <link rel="stylesheet" href="styles/base.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="styles/base.css" />
+    <script defer src="scripts/practice.js"></script>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="index.html" id="logo_link">
-                <img src="images/logo.png" alt="logo" class = "logo">
-            </a>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="mywork.html">Portfolio</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <a href="index.html" id="logo_link">
+          <img src="images/logo.png" alt="logo" class="logo" />
+        </a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="mywork.html">Portfolio</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <div id="hero">
-            <div id="hero-msg">   
-                <h1>I'm <span>Jonathan Nkansah Koranteng</span></h1>
-                <p>Graphic Designer | Web Design | Web Development</p>
-                <a href="#">Contact Me</a>
-            </div>    
-            <div class="container">
-                <div class="image-container">
-                    <img id="mypic" src="images/my pic.png" alt="Picture of Me">
-                </div>
-            </div>
+      <div id="hero">
+        <div id="hero-msg">
+          <h1>I'm <span>Jonathan Nkansah Koranteng</span></h1>
+          <p>Graphic Designer | Web Design | Web Development</p>
+          <a href="mailto:jkoranteng48@gmail.com">Contact Me</a>
         </div>
-        <article class="About">
-            <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati 
-                eligendi accusamus natus eius tempore tempora, expedita dolore placeat 
-                tenetur in mollitia perferendis magnam beatae, praesentium ad atque. Nihil, 
-                voluptates voluptatem? Fugit doloremque alias, harum ipsa ad ratione voluptatum 
-                excepturi accusantium amet minima optio magnam! Nulla ea quae quibusdam in consectetur.</p>
-        </article>
-        <section class="skills">
-            <h2>My Skills</h2>
-            <div class="skill-cards">
-                <img class="card" src="images/elementor-placeholder-image.webp" alt="image">
-                <img class="card" src="images/elementor-placeholder-image.webp" alt="image">
-                <img class="card" src="images/elementor-placeholder-image.webp" alt="image">
-                <img class="card" src="images/elementor-placeholder-image.webp" alt="image">
-                <img class="card" src="images/elementor-placeholder-image.webp" alt="image">
-                <img class="card" src="images/elementor-placeholder-image.webp" alt="image">
-            </div>
-        </section>
+        <div class="container">
+          <div class="image-container">
+            <img id="mypic" src="images/my pic.png" alt="Picture of Me" />
+          </div>
+        </div>
+      </div>
+      <article class="About">
+        <h2>About Me</h2>
+        <p>
+          Hi there, I'm currently working on obtaining a degree in software
+          development. So far, I have a great foundation in the use of HTML, CSS
+          and JavaScript, python and git. I have worked on a number of projects
+          and will continue to work on more. I am honored to my skills with you
+          through this Portfolio.
+        </p>
+      </article>
+      <section class="skills">
+        <h2>My Skills</h2>
+        <div class="skill-cards">
+          <img
+            class="card"
+            src="images/htmlcssjs-overview1.png"
+            alt="html,css and Js logos"
+          />
+          <img class="card" src="images/Python-Symbol1.jpg" alt="Python logo" />
+          <img class="card" src="images/github-git.png" alt="image" />
+        </div>
+      </section>
     </main>
     <footer>
-        <div class="line"></div>
-        <div class="s-container">
-            <div class="socials">
-                <a href="">
-                  <img src="images/whatsapp.png" alt="whatsapp icon">
-                </a>
-                <a href="">
-                  <img src="images/github_5968896.png" alt="Github icon">
-                </a>
-                <a href="">
-                  <img src="images/linkedin_1384155.png" alt="LinkedIn icon">
-                </a>
-            </div>
-            <p>Connect With Me</p>
+      <div class="line"></div>
+      <div class="s-container">
+        <div class="socials">
+          <a href="https://wa.me/+233548112339">
+            <img src="images/whatsapp.png" alt="whatsapp icon" />
+          </a>
+          <a href="https://github.com/Jkrant48">
+            <img src="images/github_5968896.png" alt="Github icon" />
+          </a>
+          <a href="https://www.linkedin.com/in/jonathan-n-koranteng-8b4b45205">
+            <img src="images/linkedin_1384155.png" alt="LinkedIn icon" />
+          </a>
         </div>
-        <div class="line"></div>        
+        <p>Connect With Me</p>
+      </div>
+      <div class="line"></div>
     </footer>
-</body>
+  </body>
 </html>
