--- a/mywork.html
+++ b/mywork.html
@@ -28,7 +28,7 @@
             <div id="h-msg">   
                 <h1>My WorkSpace</h1>
                 <p>Here are some projects I have worked on. Enjoy!</p>
-                <a href="#">Work With Me</a>
+                <a href="mailto:jkoranteng48@gmail.com">Work With Me</a>
             </div>    
             <div class="img-container">
                 <img class="h-pic" src="images/my pic2.png" alt="Picture of myself">
@@ -83,13 +83,13 @@
         <div class="line"></div>
         <div class="s-container">
             <div class="socials">
-                <a href="">
+                <a href="https://wa.me/+233548112339">
                   <img src="images/whatsapp.png" alt="whatsapp icon">
                 </a>
-                <a href="">
+                <a href="https://github.com/Jkrant48">
                   <img src="images/github_5968896.png" alt="Github icon">
                 </a>
-                <a href="">
+                <a href="https://www.linkedin.com/in/jonathan-n-koranteng-8b4b45205">
                   <img src="images/linkedin_1384155.png" alt="LinkedIn icon">
                 </a>
             </div>
